Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-08-08 (SVN):
    * oslibs: recompiled x86_64 versions of osx codecs against 10.4 SDK
      using a gcc-5666.3/cctools-806 based cross-toolchain as described
      at https://github.com/Tatsh/xchain/.

2012-08-02 (SVN):
    * oslibs: added dylib versions of libmad and ogg/vorbis for macosx,
      fat binaries for ppc, x86 and x86_64. removed the ppc64 versions
      of the static libs.

2012-07-24 (SVN):
    * oslibs: added ppc64 versions of libmad and ogg/vorbis static libs
      for macosx. (untested for now)

2012-07-23 (SVN):
    * xcode project file: enabled the mp3, vorbis and wav codecs, added
      the codecd header path to HEADER_SEARCH_PATHS. the link libraries
      still need adding.

2012-07-23 (SVN):
    * updated version date stamp to 2012-07-23.
    * updated documentation.

2012-07-23 (SVN):
    * macosx: require 10.5 for 64 bit builds.

2012-07-23 (SVN):
    * macosx: enabled the mp3 and ogg/vorbis music playback.

2012-07-23 (SVN):
    * oslibs: added libmad and ogg/vorbis headers and static libraries
      for macosx.

2012-07-22 (SVN):
    * updated version date stamp to 2012-07-22.
    * updated documentation.

2012-07-22 (SVN):
    * Separated common unix and darwin sections in the makefiles.

2012-07-22 (SVN):
    * Fixed OSX gl linkage when we aren't dynamically linking to opengl
      functions at runtime. No need for -lm either.

2012-07-22 (SVN):
    * Added support for building the OSX versions usin gthe makefiles.
      Do not rely on sdl-config on OSX Framework builds and define new
      SDL_FRAMEWORK and NO_SDL_CONFIG preprocessor macros to indicate
      that and include SDL.h with the "SDL" subdirectory name included.

2012-07-22 (SVN):
    * Added new OSX midi driver based on SDL_mixer using CoreServices,
      added it to build and removed the old QuickTime code from build.
      As a bonus, this eliminates our dependency to Carbon stuff.
